# jags-wald

./: .gitignore  Makefile.am  README  configure.ac  remove_gsl.patch
examples/SWmixturesCode/: Fit_IG_GAM_ind.R  Fit_IG_TN_ind.R  Model_IG_GAM_ind.txt  Model_IG_TN_ind.txt  ReadMe.txt
examples/usage_example/: dswald.R  dswald2.R  dwald.R  dwald_gamma.R  dwald_gamma2.R
src/: Makefile.am  bernoulli.cc  wald.cc
src/distributions/: DBern.cc  DBern.h  DSWTN.cc  DSWTN.h  DSWald.cc  DSWald.h  DWald.cc  DWald.h  DWaldGamma.cc  DWaldGamma.h  DWaldTrunc.cc  DWaldTrunc.h  Makefile.am  PSWald.cc  PSWald.h
src/functions/: DSWaldfunc.cc  DSWaldfunc.h  LogBernFun.cc  LogBernFun.h  Makefile.am  PSWaldfunc.cc  PSWaldfunc.h
usage_example/: bern.R  dswald.R  dswald2.R  dswald_miller.R  dwald.R  dwald_gamma.R  dwald_gamma3.R  dwald_trunc.R  shiftedwald.R  wald.R
win/: jags.nsi
